--- a/JitaBM.html
+++ b/JitaBM.html
@@ -61,7 +61,7 @@
 
     <script>
         const ISK_TO_KRED_RATE = 100;
-        const MINER_GAME_FILE = "jita.html";
+        const MINER_GAME_FILE = "Jita.html";
         const ISK_PER_LOG = 1000; // Value for each log sold
         const BLACK_MARKET_ENTRY_ISK = 7770; // Ensure this matches Jita.html
 
