--- a/Jita.html
+++ b/Jita.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pixel Miner Deluxe - Jita (DIAGNOSTIC)</title>
+    <title>EVE: Offline (Ver 1.4 Something) VIBE CODED</title>
     <meta charset="UTF-8">
     <style>
         /* Styles remain the same */
